--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML#Introduction">Перейти к разделу Introduction на MDN</a></li>
             <li>
                 <img src="https://png.pngtree.com/png-clipart/20230501/original/pngtree-mushroom-girl-3d-cute-expression-png-image_9129145.png"
-                     alt="Пример изображения" usemap="#imagemap" width="500" height="300">
+                     alt="Пример изображения" usemap="#imagemap" width=100%>
                 <map name="imagemap">
                     <area shape="rect" coords="34,44,270,350" alt="Прямоугольник" href="web.html">
                     <area shape="circle" coords="337,300,44" alt="Круг" href="web.html">
